<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    tools:context=".EventsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar_profile2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/perfil_male" />

    <ImageView
        android:id="@+id/btn_back_signup"
        android:layout_width="39dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_title_events"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@+id/btn_back_signup"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_subtitle_events"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_subtitle_events2"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rl_events_4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <RelativeLayout
        android:id="@+id/rl_events_1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/iv_events1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/event_1" />

        <TextView
            android:id="@+id/tv_events1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_title_events1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_events1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_info_events1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_events1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_date_events1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_events_2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rl_events_1">

        <ImageView
            android:id="@+id/iv_events2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/event_2" />

        <TextView
            android:id="@+id/tv_events2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_title_events2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_events2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_info_events2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_events2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_date_events2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_events_3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rl_events_2">

        <ImageView
            android:id="@+id/iv_events3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/event_3" />

        <TextView
            android:id="@+id/tv_events3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_title_events3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_events3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_info_events3"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_events3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_date_events3"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_events_4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rl_events_3">

        <ImageView
            android:id="@+id/iv_events4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/event_4" />

        <TextView
            android:id="@+id/tv_events4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_title_events4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_events4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_info_events4"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_events4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_date_events4"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_events_5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <ImageView
            android:id="@+id/iv_events5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/event_5" />

        <TextView
            android:id="@+id/tv_events5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_title_events5"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_events5_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_info_events5"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_events5_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_date_events5"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_events_6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/rl_events_5">

        <ImageView
            android:id="@+id/iv_events6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/event_6" />

        <TextView
            android:id="@+id/tv_events6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_title_events6"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_events6_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/txt_info_events6"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_events6_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt_date_events6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>