<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    tools:context=".DeleteAccountFragment">


    <TextView
        android:id="@+id/textView32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_delete_account3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword12" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar_profile11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/perfil_male" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_title_delete_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@+id/btn_back_delete_account"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back_delete_account"
        android:layout_width="39dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_subtitle_delete_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/lbl_subtitle_delete_account2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/lbl_subtitle_delete_account3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextPassword11"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/txt_delete_account"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextPassword12"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/txt_delete_account2"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword11" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword12" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_account"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:text="@string/lbl_btn_delete_account"
        app:backgroundTint="#E53935"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>