<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment">

    <ImageView
        android:id="@+id/btn_back_login"
        android:layout_width="39dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="221dp"
        android:layout_height="71dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/btn_back_login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_welcome_forgot_pass"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_forgot_pass"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/lbl_forgot_pass1"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forgot_pass"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="76dp"
        android:text="@string/lbl_btn_enviar"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <FrameLayout
        android:id="@+id/fragmentContainerView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>